--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -5,8 +5,8 @@ mentorship. I will forever carry the lessons I learned from him.
 
 I want to thank my committee members Andrew Wilson and Adrian Lewis, as well as
 my temporary advisor Shane Henderson. Andrew led me into an important area of my
-research, which makes up Chapter 3 of this thesis. Adrian and Shane both offered
-my valuable advice in research and life as a graduate student.
+research, which makes up Chapter 3 of this dissertation. Adrian and Shane both
+offered my valuable advice in research and life as a graduate student.
 
 I deeply appreciate all my wonderful collaborators. Chapter 2 was co-authored
 with Austin Benson and David Bindel. Chapter 3 was co-authored with David
