--- a/lrtm/background.tex
+++ b/lrtm/background.tex
@@ -21,7 +21,7 @@ matrix, whose entry $A_{kl}$ captures the joint probability between two latent
 clusters $k$ and $l$.\footnote{$C$ is proven to be a by far more robust
 estimator than $H$ in \cite{AGM}.  But actual construction of $C$ in 
 \cite{arora2013practical} is slightly misleading without dividing by $M$. We
-report the full equations in this paper.} In the limit, using data generated
+report the full equations here.} In the limit, using data generated
 according to the correct probabilistic models, $A$ must agree with the
 second\hyp{}moment of the cluster proportions, which is given as a Bayesian
 prior in the models.
