--- a/lrtm/introduction.tex
+++ b/lrtm/introduction.tex
@@ -83,7 +83,7 @@ scalable pipeline: that efficiently performs quality posterior inference for
 unsupervised learning from co\hyp{}occurrence information within time and space
 complexity linear in $N$. 
 
-The major contributions of our paper are:
+The major contributions in this chapter are:
 \begin{itemize}[leftmargin=*]
     \item We introduce two efficient rectifications, ENN and PALM, that compress
     quadratic and noisy co\hyp{}occurrence information on the fly with a linear
