--- a/ndos/introduction.tex
+++ b/ndos/introduction.tex
@@ -69,7 +69,7 @@ only recently that clever computational methods were developed simply to
 matrices by computing only \emph{part} of the spectrum~
 \cite{eikmeier2017revisiting}.
 
-In this paper, we show how methods used to study densities of states in
+In this chapter, we show how methods used to study densities of states in
 condensed matter physics~\cite{weisse2006kernel} can be used to study spectral
 densities in networks.  We study these methods for both the {\em global} density
 of states and for {\em local} densities of states weighted by specific
