--- a/preliminary.tex
+++ b/preliminary.tex
@@ -25,9 +25,9 @@ $\calV = \calU = \{0, 1\}^N$ measures the number of edges from one set of nodes
 to the other and thus can be used in graph partitioning tasks.
 
 Therefore, it is inadequate to categorize data matrices by their linear
-algebraic roles. Instead, we introduce the matrices encountered in this thesis
-by the properties of datasets they encapsulate. Regardless the type of data
-matrices we are dealing with, the most critical task is identifying the
+algebraic roles. Instead, we introduce the matrices encountered in this
+dissertation by the properties of datasets they encapsulate. Regardless the type
+of data matrices we are dealing with, the most critical task is identifying the
 intrinsic numerical properties attached to it, so that we can adapt our
 algorithms to specific applications.
 
