--- a/references.bib
+++ b/references.bib
@@ -38,6 +38,46 @@
   organization={IEEE}
 }
 
+@inproceedings{dong2017scalable,
+  title={Scalable log determinants for Gaussian process kernel learning},
+  author={Dong, Kun and Eriksson, David and Nickisch, Hannes and Bindel, David and Wilson, Andrew G},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={6327--6337},
+  year={2017}
+}
+
+@article{dong2018interpolative,
+  title={Interpolative separable density fitting through centroidal voronoi tessellation with applications to hybrid functional electronic structure calculations},
+  author={Dong, Kun and Hu, Wei and Lin, Lin},
+  journal={Journal of chemical theory and computation},
+  volume={14},
+  number={3},
+  pages={1311--1320},
+  year={2018},
+  publisher={ACS Publications}
+}
+
+@article{dong2019network,
+  title={Network Density of States},
+  author={Dong, Kun and Benson, Austin R and Bindel, David},
+  journal={arXiv preprint arXiv:1905.09758},
+  year={2019}
+}
+
+@article{eriksson2018scalable,
+  title={Scalable kernel methods and their use in black-box optimization},
+  author={Eriksson, David},
+  year={2018}
+}
+
+@inproceedings{eriksson2018scaling,
+  title={Scaling Gaussian process regression with derivatives},
+  author={Eriksson, David and Dong, Kun and Lee, Eric and Bindel, David and Wilson, Andrew G},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={6867--6877},
+  year={2018}
+}
+
 @article{lee1999learning,
   title={Learning the parts of objects by non-negative matrix factorization},
   author={Lee, Daniel D and Seung, H Sebastian},
