--- a/sgp/methods.tex
+++ b/sgp/methods.tex
@@ -219,4 +219,5 @@ discrete orthogonality condition
 \end{equation}
 For appropriate RBF kernels, this linear system is nonsingular provided that
 polynomials in $\Pi_{m-1}^d$ are uniquely determined by their values on the
-interpolation set.
+interpolation set. We refer the readers to this dissertation
+\cite{eriksson2018scalable} for more details.
