--- a/introduction.tex
+++ b/introduction.tex
@@ -63,9 +63,10 @@ graphs with over a billion edges on a single compute node. Beyond providing
 visually compelling fingerprints of graphs, we show how the  estimation of
 spectral densities facilitates the computation of many common centrality
 measures, and use spectral densities to estimate meaningful information about
-graph structure that cannot be inferred from the extremal eigenpairs alone.
+graph structure that cannot be inferred from the extremal eigenpairs alone. This
+work is accepted for publication in KDD 2019\cite{dong2019network}.
 
-\cref{ch4} develop novel approaches for Gaussian processes (GPs) regression.
+\cref{ch4} develops novel approaches for Gaussian processes (GPs) regression.
 The computational bottleneck of kernel learning for GPs is computing the log
 determinant and its derivatives of an $N\Times N$ kernel matrix. Building on
 existing fast matrix-vector-multiplication approximation for kernel
@@ -76,7 +77,8 @@ the traditional GP capability. Furthermore, we extend these ideas to GP
 regression on both function values and derivatives. Our approaches, together
 with dimensionality reduction and preconditioning, let us scale Bayesian
 optimization with derivatives to high\hyp{}dimensional problems and large
-evaluation budgets.
+evaluation budgets. This work is accepted for publication in NeurIPS 2018
+\cite{dong2017scalable} and NeurIPS 2019 \cite{eriksson2018scaling}.
 
 \cref{ch5} proposes a complete pipeline for spectral inference of topic
 models that scales gracefully with both the size of vocabulary and the dimension
@@ -93,4 +95,6 @@ orbital pairs through a set of non\hyp{}uniform interpolation points. Our
 method, implemented as a weighted K-means algorithm with random initialization,
 achieves comparable accuracy to the existing procedure but at a cost negligible
 in the overall calculations. We also find that our algorithm, as a continuation
-method, enhances the smoothness of the potential energy surface.
+method, enhances the smoothness of the potential energy surface. This work is
+accepted for publication in Journal of Chemical Theory and Computation
+\cite{dong2018interpolative}.
