--- a/ndos/background.tex
+++ b/ndos/background.tex
@@ -114,7 +114,7 @@ taking the value 0 at 0, the error for estimated $\widetilde{\mu}$ is in the
 Wasserstein distance (a.k.a.\ earth-mover distance)~\cite{kantorovich1958space}
 \begin{equation}\label{eqn:waisserstein}
 W_1(\mu,\widetilde{\mu}) = \sup\Big\{\int (\mu(\lambda)-\widetilde{\mu}(\lambda
-))f(\lambda)d\lambda : \text{Lip}(f)\leq 1\Big\}.
+))f(\lambda)d\lambda : \text{Lip}(f)\leq 1\Big\}\,.
 \end{equation}
 This notion is particularly useful when $\mu$ is integrated against in 
 applications such as computing centrality measures.
