--- a/ndos/experiments.tex
+++ b/ndos/experiments.tex
@@ -333,7 +333,7 @@ constructs a similar graph by a two-step process: first create a collection of
 \cite{chung2002connected}. \citeauthor{seshadhri2012community} showed their
 model accurately captures the observable properties of the given graph,
 including the eigenvalues of the adjacency matrix. \cref{fig:bter} compares the
-DOS/PDOS of the Erd\"{o}s collaboration network and its BTER counterpart. Unlike
+DOS/PDOS of the \Erdos\ collaboration network and its BTER counterpart. Unlike
 the original graph, most $0$ eigenvalues in BTER graph come from isolated nodes.
 The BTER graph also has many more isolated edges ($\lambda=\pm1$),
 singly-attached chains ($\lambda=\pm1/\sqrt{2})$), and singly-attached triangles
