half read through

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -28,8 +28,8 @@ and helped me become a better researcher and programmer.
 Most importantly, I am sincerely grateful for my supportive family and wife. You
 have always been by my side even when I am far away.
 
-My work is supported by the Cornell Center for Applied Mathematics, the National
-Science Foundation Grant DMS-1620038, teaching assistantship in Cornell's
-Department of Computer Science and Department of Mathematics, and the Cornell
-University Fellowship. During the summer of 2017, I am supported by the Lawrence
-Berkeley National Laboratory as a graduate research intern.
+My work has been supported by the Cornell Center for Applied Mathematics, the
+National Science Foundation Grant DMS-1620038, teaching assistantship in
+Cornell's Department of Computer Science and Department of Mathematics, and the
+Cornell University Fellowship. During the summer of 2017, I was supported by the
+Lawrence Berkeley National Laboratory as a graduate research intern.
